istio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: python-app-gateway
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-app-rules
spec:
  hosts:
  - test-app.python-app-svc.com
  gateways:
  - istio-system/python-app-gateway
  http:
  - match:
    - uri:
        prefix: "/python-app/"
    route:
    - destination:
        host: python-app-svc.test-app.svc.cluster.local
        port:
          number: 8000
  - match:
    - uri:
        prefix: "/redis-app/"
    route:
    - destination:
        host: redis.test-app.svc.cluster.local
        port:
          number: 6379
